apps/traefik-green-variant/manifests/IngressClass-traefik-green-variant.yml
---
# Source: traefik/templates/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "false"
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-green-variant-traefik-green-variant
    app.kubernetes.io/managed-by: Helm
  name: traefik-green-variant
spec:
  controller: traefik.io/ingress-controller
