apps/traefik-green-variant/manifests/Deployment-traefik-green-variant.yml
---
# Source: traefik/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-green-variant
  namespace: traefik-green-variant
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-green-variant-traefik-green-variant
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik-green-variant-traefik-green-variant
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  minReadySeconds: 0
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9100"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/instance: traefik-green-variant-traefik-green-variant
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: traefik
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - --entryPoints.metrics.address=:9100/tcp
            - --entryPoints.traefik.address=:8080/tcp
            - --entryPoints.web.address=:8000/tcp
            - --entryPoints.websecure.address=:8443/tcp
            - --api.dashboard=true
            - --ping=true
            - --metrics.prometheus=true
            - --metrics.prometheus.entrypoint=metrics
            - --providers.kubernetescrd
            - --providers.kubernetescrd.allowCrossNamespace=true
            - --providers.kubernetescrd.allowEmptyServices=true
            - --providers.kubernetesingress
            - --providers.kubernetesingress.allowEmptyServices=true
            - --providers.kubernetesingress.ingressendpoint.publishedservice=traefik-green-variant/traefik-green-variant
            - --providers.kubernetesgateway
            - --providers.kubernetesgateway.statusaddress.service.name=traefik-green-variant
            - --providers.kubernetesgateway.statusaddress.service.namespace=traefik-green-variant
            - --entryPoints.web.forwardedHeaders.insecure
            - --entryPoints.websecure.http.tls=true
            - --log.level=INFO
          image: docker.io/traefik:v3.7.6
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              sleep:
                seconds: 300
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          name: traefik-green-variant
          ports:
            - containerPort: 9100
              name: metrics
              protocol: TCP
            - containerPort: 8080
              name: traefik
              protocol: TCP
            - containerPort: 8000
              name: web
              protocol: TCP
            - containerPort: 8443
              name: websecure
              protocol: TCP
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 150m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /tmp
              name: tmp
      hostNetwork: false
      priorityClassName: cluster-infrastructure
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: traefik-green-variant
      terminationGracePeriodSeconds: 320
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: traefik-green-variant-traefik-green-variant
          maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - emptyDir: {}
          name: data
        - emptyDir: {}
          name: tmp
